hphp/hack/test/typecheck/expression_trees/splice_err1.php.exp
ERROR: File "splice_err1.php", line 9, characters 21-22:
Invalid argument (Typing[4110])
  File "expr_tree.php", line 87, characters 5-29:
  Expected `ExampleExpression<_>`
  File "splice_err1.php", line 6, characters 8-8:
  But got `int`
